--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,5 @@
   "buildCommand": "pnpm --filter @spectral/web build",
   "outputDirectory": "apps/web/.next",
   "installCommand": "pnpm install --frozen-lockfile",
-  "framework": "nextjs",
-  "ignoreCommand": "git diff --quiet HEAD^ HEAD -- apps/web/ package.json pnpm-lock.yaml"
+  "framework": "nextjs"
 }
